2006-01-15  Jordi Mas <jordimash@gmail.com>

	* Adds GraphicsUnits.cs

2005-09-06  Jordi Mas <jordi@ximian.com>

	* clipping: Sample to test clipping

2004-06-17  Ravindra <rkumar@novell.com>

	* BmpPaint.cs: Fixed, formatted and moved here from
	Test/System.Drawing directory.
	* font.cs: Formatted and moved here from Test/System.Drawing
	directory.
	* bmpsave.cs: Formatted and moved here from Test/System.Drawing
	directory.
	* graphicsUi.cs: Formatted and moved here from
	Test/System.Drawing directory.

2004-05-31  Ravindra <rkumar@novell.com>

	* pie.cs: Made the output image little organized and added a
	case where DrawPie and FillPie were crashing the system. It
	was happening with zero degree sweep angle.

2004-05-04  Ravindra <rkumar@novell.com>

	* ImageRotateFlip.cs: Changed text color from white to
	black and set the white background.

2004-05-04  Jordi Mas <jordi@ximian.com>
	* ImageRotateFlip.cs: Added ImageRotateFlip.cs example.

2004-04-24  Ravindra  <rkumar@novell.com>

	* pie.cs: Added a case to clear the graphics surface
	and fill it with a background color. Fixing
	Graphics.Clear(color) method.

2004-04-07  Ravindra  <rkumar@novell.com>
	* TextureWrapModes.cs: Use PNG, instead of BMP.

2004-04-07  Duncan Mak  <duncan@ximian.com>

	* pie.cs: Added a case where the sweep angle is greater than 360
	degrees.

2004-04-06  Duncan Mak  <duncan@ximian.com>

	* pie.cs: Save to PNG, instead of BMP.

2004-03-26  Ravindra <rkumar@novell.com>
	* TextureWrapModes.cs: Changed the file format dos2unix and 
	adjusted the generated image size.

2004-03-25  Ravindra <rkumar@novell.com>
	* bitmaps: Added a repository for the bitmaps required by some of
	the samples of this repository.
	* TextureWrapModes.cs: Added a sample for texture brush wrapmodes.

2004-03-24  Jordi <jordi@ximian.com>
	* Added drawimage.cs example	
	
2004-03-22  Jordi <jordi@ximian.com>
	* Added pie.cs example	

2004-03-17  Ravindra  <rkumar@novell.com>